--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   font-size: 80px;
 }
 
+.fs-2 {
+  font-family: 'Roboto' ;
+}
+
+.grease-hide {
+  background: #FD3DA0;
+  border: 3px solid #D5FFB1;
+}
+
 
 /* Custom styles for Navbar */
 .opacity-hover-off {
@@ -41,6 +50,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 #contact {
   background: #c6b0bc;
 }
+
+#feelTheGrease, .grease-hide {
+  font-family: 'Freckle Face';
+  background-color: #FD3DA0;
+  border: 2px solid #c6b0bc;
+}
+
 
 
 
@@ -136,6 +152,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
     margin-top: 25px;
   font-size: 4rem;
   font-weight: 600;
+}
+
+.grease-hide {
+  display: none;
+}
+
+.dropdown-menu-center {
+   left: 50% !important; 
+  transform: translateX(-50%); 
+  background: #c6b0bc;
+ 
+}
+.dropdown-item {
+   color: #000;
 }
 }
 
