--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   font-size: 1.8rem;
 }
 
-@media((min-width:421px) and (max-width:820px)) {
+@media screen and ((min-width:460px) and (max-width:820px)) {
    .bg-img {
   background-image: url('imgs/BloatlyPizzaHog14Cover.webp');
   background-size:cover;
@@ -223,7 +223,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 
 
 /* For Phone */
-@media(max-width: 420px){
+@media((min-width:370px)and (max-width: 420px)){
  .bg-img {
   background-image: url('imgs/BloatlyPizzaHog14Cover.webp');
   background-size:cover;
