--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   font-size: 1.8rem;
 }
 
-@media screen and ((min-width:460px) and (max-width:820px)) {
+/* @media screen and ((min-width:460px) and (max-width:820px)) {
    .bg-img {
   background-image: url('imgs/BloatlyPizzaHog14Cover.webp');
   background-size:cover;
@@ -218,12 +218,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 .char-reviews {
   font-size: 2rem;
 }
-}
+} */
 
 
 
 /* For Phone */
-@media((min-width:370px)and (max-width: 420px)){
+@media(max-width: 420px){
  .bg-img {
   background-image: url('imgs/BloatlyPizzaHog14Cover.webp');
   background-size:cover;
