--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   font-size: 1.8rem;
 }
 
-/* @media screen and ((min-width:460px) and (max-width:820px)) {
+@media screen and ((min-width:460px) and (max-width:820px)) {
    .bg-img {
   background-image: url('imgs/BloatlyPizzaHog14Cover.webp');
   background-size:cover;
@@ -214,7 +214,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 .char-reviews {
   font-size: 2rem;
 }
-} */
+}
 
 
 
