--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 .characters {
   margin-right: 20px;
   margin-left: 20px;
+  background: #c6b0bc;
   
 }
 
@@ -227,18 +228,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   min-height: 100vh;
   color: black;
 }
-/* .characters {
-  margin-right: 140px;
-  height: 150px;
-  overflow-x: auto;
-} */
 
-.bloaty {
-  height: 3rem;
+.grease-hide {
+  display: none;
 }
 
+.characters {
+  background: #c6b0bc;
+ margin-left: 69px;
+  height: 150px;
+  /* overflow-x: auto; */
+}
+
+
+
 .char-reviews {
-  margin: 5px 70px 0 70px ;
-  font-size: 2em;
+  margin: 5px 20px 0 10px ;
+  font-size: 1.4em;
 }
 }
