--- a/style.css
+++ b/style.css
@@ -261,4 +261,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   margin: 5px 20px 0 10px ;
   font-size: 1.4em;
 }
+
+
+
+.bg-gif {
+  background-image: url('imgs/bloatyWants.gif');
+  background-size:contain;
+  background-repeat: no-repeat;
+  background-position:center;
+  min-height: 100vh;
+  color: black;
+  background-color: #c6b0bc;
+}
 }
