--- a/style.css
+++ b/style.css
@@ -244,6 +244,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
   border: 2px solid #D5FFB1;
 }
 
+  .grease {
+  margin-top: 29px;
+  padding-top: 40px;
+  font-size: 4rem;
+  font-weight: 600;
+}
+
 .grease-hide {
   display: none;
 }
