--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "CustomFont", sans-serif}
 }
 }
 
+footer a  {
+  text-decoration: none;
+}
+
 
 
 /* For Phone */
